--- a/sample-application-secured/guestbook.yml
+++ b/sample-application-secured/guestbook.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: sample-app
-  #annotations: {
-    #paloaltonetworks.com/firewall: pan-fw
+  name: sample-app-secured
+  annotations: {
+    paloaltonetworks.com/firewall: pan-fw
   }
 ---
 apiVersion: apps/v1
@@ -12,7 +12,7 @@ metadata:
   name: redis-master
   labels:
     app: redis
-  namespace: sample-app
+  namespace: sample-app-secured
 spec:
   selector:
     matchLabels:
@@ -45,7 +45,7 @@ metadata:
     app: redis
     role: master
     tier: backend
-  namespace: sample-app
+  namespace: sample-app-secured
 spec:
   ports:
   - port: 6379
@@ -61,7 +61,7 @@ metadata:
   name: redis-slave
   labels:
     app: redis
-  namespace: sample-app
+  namespace: sample-app-secured
 spec:
   selector:
     matchLabels:
@@ -105,7 +105,7 @@ metadata:
     app: redis
     role: slave
     tier: backend
-  namespace: sample-app
+  namespace: sample-app-secured
 spec:
   ports:
   - port: 6379
@@ -120,7 +120,7 @@ metadata:
   name: frontend
   labels:
     app: guestbook
-  namespace: sample-app
+  namespace: sample-app-secured
 spec:
   selector:
     matchLabels:
@@ -161,7 +161,7 @@ metadata:
   labels:
     app: guestbook
     tier: frontend
-  namespace: sample-app
+  namespace: sample-app-secured
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-type: nlb
 spec:
